# PURL

./: .gitignore  LICENSE  README.md  filter_noisy_samples.py  plot_eval_metrics.py  pyproject.toml  requirements.txt  run_clustering.py  run_test.py  run_test_all.sh  run_test_ncu30ep_ascent_parallel.sh  run_test_ncu30ep_resnet34.sh  run_test_parallel.sh  run_test_parallel_resnet34_voxsrc.sh  run_test_parallel_voxsrc.sh  run_test_supcon_resnet34_voxceleb.sh  run_test_supcon_voxceleb_cnceleb_voxsrc.sh  run_train.py  run_train_and_test_ncu30ep_beta5.sh  streamlit_gmm_pairs.py  streamlit_tsne.py  visualize_embeddings.py
configs/: aamsoftmax.yaml  chns.yaml  chns_hscl.yaml  cnceleb_eval.yaml  hscl.yaml  ncu.yaml  ncu_30ep.yaml  ncu_30ep_ascent.yaml  ncu_30ep_resnet34.yaml  ncu_5ep.yaml  supcon.yaml  supcon_resnet34.yaml  supcon_resnet34_voxsrc2023.yaml  supcon_voxsrc2023.yaml
resources/: vox2_valid_pairs.txt
scripts/: convert_cnceleb_trials_to_pairs.py  make_spk2utt_and_utt2spk.sh
src/: losses.py  metrics.py  models.py  ncu_utils.py  trainers.py
src/data/: __init__.py  augmentations.py  data_utils.py  datamodules.py  datasets.py  feature_extractors.py  samplers.py
src/modules/thin_resnet/: __init__.py  blocks.py  model.py
src/scripts/: save_model.py
